# website

./: .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE.md  README.md  pygraz_website.lektorproject  pyproject.toml
assets/static/: style.css
content/: contents.lr
content/about/: contents.lr
content/blog/: contents.lr
content/blog/first-post/: contents.lr
content/projects/: contents.lr
scripts/: convert_pygraz_csv_to_lektor.py  setup_project.sh  update_dependencies.sh
templates/: layout.html
